<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Diet Plan</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_lose">LoseActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_burning">BurningActivity</string>
    <string name="discription">Healthy Vitamin C levels will help to keep you functioning at optimal levels,but if you\'re looking to burn fat you might be concerned about the sugar in oranges .There\'s no getting around it,oranges do contain sugar,which has the potential to turn to fat if it\'s not burned up .But the calorie count is low,and the fibre actually helps to regulate your blood glucose levels .In order for this to work out for you as a weight loss aid and eat it in moderation and to curb your sweet tooth.</string>
    <string name="tamatom">Is it a fruit?Is it a vegetable?who cares?All you need to know is that it\'s got a ton of good things for your body for the long term,and in the short term it works to help you lose weight and help keep it off.They\'re low on the calorie meter ,but they help to give you that full feeling ,and contain fibre that keeps things moving .Like any bona fide superfood tomatoes bring more to the table than just weight loss.The Icopenen brings antioxidants that studies are showing to be potentiallly helpfull with a myriad of diseases and conditions.Be sure to add tomatoes to your cart next time. </string>
    <string name="oats"> A paper published in the American Journal of Lifestyle Medicine in 2008, assessed a number of studies across more than a decade.

They found that eating foods rich in whole-oat sources of soluble fiber (oats, oat bran, and oat flour) may help reduce the risk of coronary heart disease.

They concluded:

"[C]onsumption of oats and oat-based products significantly reduces total cholesterol and low-density lipoprotein cholesterol concentrations without adverse effects on high-density lipoprotein cholesterol or triglyceride concentrations."</string>
    <string name="tft">Spices were among the most demanded and expensive products available in Europe in the Middle Ages,[5] the most common being black pepper, cinnamon (and the cheaper alternative cassia), cumin, nutmeg, ginger and cloves. Given medieval medicine\'s main theory of humorism, spices and herbs were indispensable to balance "humors" in food,[6] a daily basis for good health at a time of recurrent pandemics. In addition to being desired by those using medieval medicine, the European elite also craved spices in the Middle Ages. </string>
    <string name="ttsf">POTATO. The potato is a tuber—a short, thick, underground stem with stored starches and sugars—of the potato plant. It was given its botanical name, Solanum tuberosum, in 1596 by the Swiss botanist Gaspard Bauhin, and belongs to the Solanaceae family, the nightshades, which includes eggplant, peppers, and the tomato. (The sweet potato is not a potato; it belongs to the morning glory family.) Growing wild as early as 13,000 years ago on the Chilean coast of South America, potatoes were first cultivated by farmers in the Andes Mountains nearly seven thousand years ago.

Nutritionally, the potato supplies complex carbohydrates—essential for energy—and a very low amount (about 10 percent) of protein. One serving (a 5.3-ounce medium potato) provides: 45 percent of Recommended Daily Intake (RDI) for vitamin C (most of it in the millimeters-thick layer immediately under the skin), 21 percent of potassium, 3 grams of fiber, essentially no fat, and only 100 calories. It is rich in the minerals iron and magnesium and supplies all the vital nutrients except calcium and vitamins A and D.</string>
    <string name="ap">A study on the benefits of apples shows that drinking apple juice could keep Alzheimer’s away and fight the effects of aging on the brain. The mice in the study that were fed an apple-enhanced diet showed higher levels of the neurotransmitter acetylcholine and did better in maze tests than those on a regular diet.Research has shown that people who eat fruits and other high-fibre foods (ahem, apples) may be protected against Parkinson’s disease, a condition characterized by a breakdown of the brain’s dopamine-producing nerve cells. Scientists have linked this to the free radical-fighting power of the antioxidants contained therein.</string>
    <string name="app">Packed with protein, fibre and essential fats, nuts are one of this season\'s best buys. A golf ball-sized portion (about 30g) of unsalted nuts makes a vitality-boosting snack and, unlike most other options, contributes a mix of valuable vitamins and minerals. All nuts have different nutrition credentials and will offer various health benefits - find your perfect match with our guide...If you avoid dairy, calcium-rich almonds are a good choice to ensure you\'re getting enough of this bone-building mineral. Almonds are also high in vitamin E, a nutrient which helps to improve the condition and appearance of your skin. For some extra heart help, swap flaked almonds for the whole nut - with the skin intact - because the almond's skin is full of heart-protecting compounds called flavonoids.</string>
    <string name="a">First how to lose weight fast tip  is that our body needs a lot of water so give in to water. Water is not just way to flush out toxin but if you have more water in your body you will generally feel healthier and fitter .This is self will discourage any tendency to gorge.The best thing about water is that is has no calories at all. </string>
    <string name="appw">As soon as you wake up ,gulp down a glass of cool water .Its a wonderful way to start you day and you only need a lesser quantity of your breakfast drink after that.A glass of water lets out all your digestive juices and sort of lubricates the insides of your body.You may have your morning cup of tea but have it after a glass of water.It is goodfor you.</string>
    <string name="appTextView">Water naturally needs some space so that you feel fuller without actually having to stuff yourself</string>
    <string name="TextView">Again this is another great how to lose weight fast super tip and a way of making yourself full,another great weight loss tips,so that you can actually rise from the table eating less but feeling full just the same.Instead of drinking it one gulp,take tips after each morsel.It will help the food to settle faster so that you get that feeling that you are full faster.Water is such a remarkable thing ,but seldome do we give it the credit that it deserves.</string>
    <string name="aTextView">Hey all those colas and fizzy drinks are sweetened with sugar and sugar means calories.The more you can cut out on these sweetened bottle drinks ,the better you.So if you must drink sodas ,then stick to diet sodas.</string>
    <string name="aTextVie">  These thiings contain 90 t95 % water so that there is nothing that you have to lose by feasting on them.They fill you up without adding to the pounds.</string>
    <string name="aextView">Juice is often sweetened but fresh fruits have natural sugars.When you eat is needed by the body ,fruits of course are an excellent source of vitamins.</string>
    <string name="axtView">instead of these that contain artificial flavors and colors.Or even better ,try making your own fruit juice taking care not to sweeten it with too many calories.</string>
    <string name="aetView">Walk 30 minutes in morning .The first day is the most important day in your UDP diet plan program.You are just stepping into the world of knowing how you can reduce your body weight and that too in 7 days time.The UDP diet plan says that the first day of the diet must be a complete fruit diet day.You have the option of eating all fruits that you possibly can and also take in whatever fruit that you like .But ,it is important for you to make sure that you avoids bananas from your fruit list on day one ,try to eat more fruits and of course drink water .
    Walk 30 minutes in Evening.</string>
    <string name="axtiew">Walk 30 minutes in morning.If day one was a day that gave you the oppurtunity to eat only vegetables throuout the day.You can take in the vegetables that you like both in the raw state and in cooked .But ,it is important for you to make sure that you do not use any sort of oil while cooking vegetables.Consuming boiled vegetables are also a good option.You can take any vegetable that you like including.Make sure that you do not miss out on your daily dose of 8to 12 glasses of water along with astrict veggie diet on day two.Walk 30 minutes in evening. </string>
    <string name="aiew">Walk 30 minutes in morning .The third day of your UDP weight lose plan will allow you to take both vegetables and fruits for the entire day.Make sure that you do not touch potatoes in the veggie section and also make sure that you do not consume bananas from the fruit from the fruit section.You have option of going fruit in the morning followed by a veggie diet in the afternoon and a fruit diet in the evening followed by a veggie and a fruit diet at night.Never miss option of drinking 8 to 12 glasses of water even on day three as well.Walk 30 minutes in evening.</string>
    <string name="aTView">Walk 30 minutes in morning.Day four would interest dieters looking for the fastest way to loose weight as it is filled with a banana and milk diet.Yes,you need to take at least a minimum of 8 to 12 bananas throughout the day and are allowed three glasses of milk .You might be a bit worried if this diet will make you feel hungry.But,on the contrary ,you feel  quite full with this diet plan at the end of the day.You need to divide bananas and the glasses of milk  properly so that you do not feel any kind of starvation on the fourth day of UDP diet plan regime.There will be no sign of hunger at all throughout the entire day if you allow this simple day four regiime.Walk 30 minutes in evening.</string>
    <string name="afddii">Omelet made with 4 egg whites and 1 whole egg,1/4 cup chopped broccoli,2 tablespoons each fat-free refried beans,diced onion,diced mushrooms,and salsa.Quesadilla made with 1/2  of one small corn tortilla and 1 tablespoon low-fat jack cheese.1/cup diced watermelon</string>
    <string name="atppp">1/2 cup fat-free vanilla yogurt with 1 sliced apple and 1 tablespoon chopped walnuts</string>
    <string name="ahhglllttt">Salad made with 2 cups chopped Romaine,4 ounces grilled chicken,1/2 cup chopped celery,1/2 cup diced mushrooms,2 tablespoonshredded low fat cheddar,and 1 tablespoon low-fat Caesar dressing.1 medium nectarine.1 cup skim milk</string>
    <string name="arrruuuppp">1 fat-free mozzarella string cheese stick.1 medium orange</string>
    <string name="ajjjooottt">4 ounces shrimp ,grilled or sauteed with 1 teaspoon olive oil and 1 teaspoon chopped garlic.1 medium articchoke,steamed.1/2 cup whole wheat couscous with 2 tablespoons diced bell pepper,1/4 cup garbanzo beans,1teaspoon chopped fresh cilantro and 1 tablespoon fat-free honey mustarddressing.</string>
</resources>