<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:text="Breakfast" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/afddii" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView56"
        android:text="Snack" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView67"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/atppp" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView67"
        android:layout_below="@+id/textView68"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="19dp"
        android:text="Lunch" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView69"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/ahhglllttt" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView69"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/textView70"
        android:layout_marginTop="12dp"
        android:text="Snack" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView71"
        android:layout_marginTop="11dp"
        android:text="@string/arrruuuppp" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView71"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/textView72"
        android:layout_marginTop="22dp"
        android:text="Dinner" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView73"
        android:layout_centerHorizontal="true"
        android:text="@string/ajjjooottt" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>